--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -33,6 +33,7 @@
     --disabled: #000000CC;
 }
 
+
 * {
 	box-sizing: border-box;
 	margin: 0;
@@ -44,6 +45,29 @@
 
 	transition: all .25s;
 	transition-timing-function: var(--animation);
+}
+* {
+	scrollbar-width: thin;
+	/* scrollbar-color: #cdcdcd #f0f0f0; */
+}
+*::-webkit-scrollbar {
+	width: 8px;
+	height: 8px;
+}
+*::-webkit-scrollbar,
+*::-webkit-scrollbar-track,
+*::-webkit-scrollbar-corner {
+	background-color: #0000001f;
+}
+*::-webkit-scrollbar-thumb {
+	background-color: #ffffff66;
+	border: 0px solid #0000001f;
+}
+*::-webkit-scrollbar-thumb:hover {
+	background-color: #ffffff42;
+}
+*::-webkit-scrollbar-thumb:active {
+	background-color: #a5a3a342;
 }
 
 html, body, main, div#root, nav,
@@ -369,7 +393,7 @@ button#copy-code { border-radius: var(--pill); }
     gap: 3em;
 }
 
-.fhfw {
+.fwfh {
     height: calc(100vh - var(--h-navbar));
     overflow: auto;
 }
@@ -482,3 +506,31 @@ code {
     white-space: -o-pre-wrap; /* Opera 7 */
     word-wrap: break-word; /* Internet Explorer 5.5+ */
 }
+
+
+
+/* ======  CODEBLOCK COMPONENT  ======*/
+div.codeblock {
+    width: 80%;
+    max-width: 1920px;
+    padding: 2rem 0 1rem 0;
+}
+div.codeblock button {
+    position: absolute;
+    right: .75rem;
+    bottom: 1.75rem;
+    padding: .3rem .75rem;
+}
+div.codeblock button .material-icons { font-size: 1.25em; }
+div.clip-scrollbar {
+    overflow: hidden;
+    border-radius: 1.5rem;
+    border: 0.15rem solid var(--text);
+}
+div.code-container {
+    width: 100%;
+    height: 400px;
+    max-width: 100%;
+    overflow: auto;
+}
+div.codeblock h3 { padding-bottom: 1rem; }
