add note component
- add note component
- populated "supported fields" subpage of docs

> version bump:
- fields marked dontSave now accesses data from "dontSave" instead of "data"
- isolated fieldData to FormStore
- dropdown selection auto-updates
- form updates when exported variables are changed

--- a/static/css/code.css
+++ b/static/css/code.css
@@ -105,7 +105,7 @@ pre[class*="language-"] {
 /* SVELTE */
 .language-svelte .token.token.attr-name { color: #9BE22E; }
 
-.language-svelte .language-javascript .token.property,
+.language-javascript .token.property,
 .language-svelte .language-javascript .token.operator 
 { color: #f8f8f2}
 
