--- a/static/css/code.css
+++ b/static/css/code.css
@@ -35,7 +35,10 @@ pre[class*="language-"],
 
 /* Code blocks */
 pre[class*="language-"] { 
-    width: 100%; 
+    width: fit-content; 
+    min-width: 100%;
+    height: fit-content;
+    min-height: 100%;
 }
 
 /* Inline code */
