--- a/static/css/code.css
+++ b/static/css/code.css
@@ -35,10 +35,10 @@ pre[class*="language-"],
 
 /* Code blocks */
 pre[class*="language-"] { 
-    width: fit-content; 
     min-width: 100%;
     height: fit-content;
     min-height: 100%;
+    overflow-x: auto;
 }
 
 /* Inline code */
@@ -136,3 +136,13 @@ pre[class*="language-"] {
 { color: #e6db74; }
 .language-css .token.punctuation { color: #f8f8f2; }
 .language-css .token.numeric { color: #AE81F1; }
+
+pre.language-highlight * { color:hsl(30, 20%, 50%); }
+.language-highlight .token.hilite1 { color: #F92672; }
+.language-highlight .token.hilite2 { color: #26f92a; }
+.language-highlight .token.hilite3 { color: #267ef9; }
+.language-highlight .token.hilite4 { color: #8526f9; }
+.language-highlight .token.hilite5 { color: #f95b26; }
+.language-highlight .token.hilite6 { color: #26f9e0; }
+.language-highlight .token.hilite7 { color: #f9c426; }
+.language-highlight .token.hilite8 { color: #93f926; }
