--- a/static/css/form.css
+++ b/static/css/form.css
@@ -118,7 +118,7 @@
     align-items: center;
 }
 .sf .switch-container {
-    min-width: 80px;
+    min-width: 4.5rem;
     min-height: calc(100% - 1rem);
     height: 2.3333rem;
     background-color: var(--accent2);
