--- a/static/css/media.css
+++ b/static/css/media.css
@@ -8,7 +8,10 @@
 }
 
 
-@media only screen and (max-width: 1538px) { :root { --w-editor: 600px; } }
+@media only screen and (max-width: 1538px) { 
+    :root { --w-editor: 600px; } 
+    #editor-sidemenu { padding: 3em; }
+}
 
 
 @media only screen and (max-width: 1436px) {
