--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -32,6 +32,11 @@
     --accent2: #815942;
 
     --disabled: #000000CC;
+
+    
+	--animation: var(--smooth);
+	--smooth: cubic-bezier(0.2, 0.85, 0.6, 1);
+	--instant: step-start;
 }
 
 
